--- a/resources/CSS/style.css
+++ b/resources/CSS/style.css
@@ -31,7 +31,6 @@ header .mobile{
 }
 
 header .left{
-  border: 1px dashed white;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -44,17 +43,18 @@ header .left img{
 }
 
 header .left h2{
+  font-family: 'Arvo', serif;
   font-size: 2rem;
   color: gray;
 }
 
 header .left h2 strong{
+  font-family: 'Arvo', serif;
   font-weight: bold;
   color: black;
 }
 
 header .right{
-  border: 1px dashed white;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -70,8 +70,14 @@ header .right ul{
 }
 
 header .right ul li{
+  font-family: 'Arvo', serif;
   margin-right: 1rem;
   font-size: 1.5rem;
+}
+
+header .right ul li:hover{
+  font-size: 1.6rem;
+  color: black;
 }
 
 header .right ul li:last-child{
@@ -80,6 +86,10 @@ header .right ul li:last-child{
 
 header .right ul li a{
   text-decoration: none;
+  color: gray;
+}
+
+header .right ul li a:hover{
   color: black;
 }
 
@@ -134,25 +144,60 @@ header .right ul li a{
   background-position: center;
   background-repeat: none;
   height: 35rem;
-  margin: 6rem 1.5rem 2rem 1.5rem;
+  margin: 2rem 1.5rem 2rem 1.5rem;
+}
+
+.banner .text{
+  display: flex;
+  padding-left: 2rem;
+  flex-direction: column;
+  align-items: center;
+
 }
 
 .banner .text h1{
+  font-family: 'Lato', sans-serif;
   font-size: 2.5rem;
   font-weight: bold;
   padding: 1rem 0;
+  text-align: center;
 }
 
 .banner .text h2{
+  font-family: 'Lato', sans-serif;
   font-size: 1.5rem;
   padding: 1rem 0;
+  text-align: center;
+}
+
+.banner .text h3{
+  font-family: 'Lato', sans-serif;
+  font-size: 1rem;
+  font-weight: bold;
+  text-align: center;
+  padding: 0 1rem;
 }
 
 .banner .text button{
-  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  align-items: center;
+  font-family: 'Lato', sans-serif;
+  width: 70%;
   padding: 0.5rem 0;
   margin: 1rem 0;
+  background-color: orange;
 }
+
+.banner .text button:active{
+  color: red;
+}
+
+.banner .text button:visited{
+  background-color: gray;
+}
+
 
 @media only screen and (max-width: 640px){
   .banner{
@@ -167,12 +212,27 @@ header .right ul li a{
 
   .banner .text{
     width: 90%;
-    margin-left: 1rem;
-  }
+    padding-left: 0;
+    justify-content: center;
+    align-items: center;
+}
+
 
   .banner .text h1{
     padding-top: 2rem;
+    text-align: center;
   }
+
+  .banner .text h2{
+    text-align: center;
+  }
+
+  .banner .text button{
+    padding-left: 0;
+  }
+
+
+
 }
 
 
@@ -197,13 +257,32 @@ header .right ul li a{
   padding: 2rem 1.5rem;
 }
 
+.content .left img{
+  border: 0.2rem solid black;
+  flex-grow: 1;
+  flex-shrink: 2;
+  height: 70%;
+  flex-basis: auto;
+  flex-shrink: 2;
+}
+
 .content .left .text h1{
+  font-family: 'Lato', sans-serif;
   font-size: 2.5rem;
   font-weight: bold;
   margin: 1rem 1rem;
 }
 
+.content .left .text p{
+  font-family: 'Lato', sans-serif;
+  font-size: 1rem;
+  line-height: 1.2;
+  font-style: italic;
+  padding-left: 1rem;
+}
+
 .content .left .text span{
+  font-family: 'Lato', sans-serif;
   display: block;
   padding: 2rem 1rem 1rem 1rem;
 }
@@ -211,12 +290,15 @@ header .right ul li a{
 .content .right{
   display: flex;
   flex-direction: column;
+  margin-right: 1rem;
 }
 
 .content .right .item{
   display: flex;
   flex-direction: row;
   margin: 2rem 0;
+  border: 0.1rem solid black;
+  background-color: white;
 }
 
 .content .right .item img{
@@ -233,6 +315,25 @@ header .right ul li a{
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.content .right .item h3{
+  font-family: 'Lato', sans-serif;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.content .right .item h5{
+  font-family: 'Lato', sans-serif;
+  font-size: 1.2rem;
+  color: gray;
+  margin: 0.4rem 0;
+}
+
+.content .right .item a{
+  font-family: 'Lato', sans-serif;
+  text-decoration: none;
+  color: orange;
 }
 
 .content .mobile{
@@ -253,6 +354,7 @@ header .right ul li a{
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-bottom: 1.5rem;
 }
 
 .content .mobile .item{
@@ -270,6 +372,25 @@ header .right ul li a{
 
 .content .mobile .item .description{
   width: 70%;
+}
+
+.content .mobile .item h3{
+  font-family: 'Lato', sans-serif;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.content .mobile .item h5{
+  font-family: 'Lato', sans-serif;
+  font-size: 1.2rem;
+  color: gray;
+  margin: 0.4rem 0;
+}
+
+.content .mobile .item a{
+  font-family: 'Lato', sans-serif;
+  text-decoration: none;
+  color: black;
 }
 
 }
@@ -295,9 +416,10 @@ header .right ul li a{
 }
 
 .courses .desktop .title h1{
+  font-family: 'Arvo', serif;
 font-size: 2.5rem;
 font-weight: bold;
-margin: 1rem 1rem;
+margin: 2rem 1rem 1rem 1rem;
 }
 
 .courses .desktop .top{
@@ -308,20 +430,25 @@ margin: 1rem 1rem;
 
 .courses .desktop .course{
   width: 30%;
-  height: 22rem;
+  height: auto;
+  min-height: 22rem;
   overflow: hidden;
   margin-right: 2rem;
   margin-bottom: 2rem;
-  background-color: gray;
+  background-color: orange;
+  flex-grow: 2;
+  border: 0.2rem gray solid;
 }
 
 .courses .desktop .course h3{
+  font-family: 'Lato', sans-serif;
   font-size: 1.5rem;
   font-weight: bold;
   margin: 1rem 1rem;
 }
 
 .courses .desktop .course span{
+  font-family: 'Lato', sans-serif;
   margin: 0.5rem 1rem;
 }
 
@@ -329,6 +456,7 @@ margin: 1rem 1rem;
   display: block;
   max-width: 100%;
   height: auto;
+  border: 0.1rem black solid;
 }
 
 .courses .desktop .course .text{
@@ -365,6 +493,7 @@ margin: 1rem 1rem;
   }
 
   .courses .mobile .title h1{
+    font-family: 'Avro', sans-serif;
     font-size: 2.5rem;
     font-weight: bold;
     margin: 1rem 1rem;
@@ -382,11 +511,13 @@ margin: 1rem 1rem;
     align-items: center;
     justify-content: flex-start;
     padding: 1rem 1rem 2rem 1rem;
-    background-color: gray;
+    background-color: orange;
     margin-bottom: 0.5rem;
+    border: 0.2rem gray solid;
   }
 
   .courses .mobile .heading h3{
+    font-family: 'Lato', sans-serif;
     font-size: 1.2rem;
     font-weight: bold;
     margin: 1rem 1rem;
@@ -406,6 +537,7 @@ margin: 1rem 1rem;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: orange;
 }
 
 .thesis .desktop .title{
@@ -415,6 +547,7 @@ margin: 1rem 1rem;
 }
 
 .thesis .desktop .title h1{
+  font-family: 'Arvo', serif;
   font-size: 2.5rem;
   font-weight: bold;
   margin: 1rem 1rem;
@@ -454,12 +587,14 @@ margin: 1rem 1rem;
 }
 
 .thesis .desktop .content .left .text h2{
+  font-family: 'Lato', sans-serif;
   font-size: 1.5rem;
   font-weight: bold;
   padding-bottom: 0.5rem;
 }
 
 .thesis .desktop .content .left .text p{
+  font-family: 'Lato', sans-serif;
   margin-bottom: 2rem;
 }
 
@@ -473,14 +608,17 @@ margin: 1rem 1rem;
   display: flex;
   flex-direction: row;
   height: 10rem;
-  overflow:;
+  border: 0.2rem solid black;
+  margin-top: 0.5rem;
+  background-color: white;
 }
 
 .thesis .desktop .content .right .examples img{
   display: block;
   max-width: 35%;
   height: auto;
-  padding: 1rem 1rem;
+  margin: 1rem 1rem;
+  border: 0.1rem black solid;
 }
 
 .thesis .desktop .content .right .examples .words{
@@ -494,6 +632,7 @@ margin: 1rem 1rem;
 }
 
 .thesis .desktop .content .right .examples .words h2{
+  font-family: 'Lato', sans-serif;
   display: block;
   font-size: 1.5rem;
   font-weight: bold;
@@ -501,6 +640,7 @@ margin: 1rem 1rem;
 }
 
 .thesis .desktop .content .right .examples .words p{
+  font-family: 'Lato', sans-serif;
   display: block;
 }
 
@@ -551,10 +691,12 @@ footer{
 }
 
 footer span{
+  font-family: 'Arvo', serif;
   padding: 1rem 0 0 1.5rem;
 }
 
 footer .terms {
+  font-family: 'Arvo', serif;
   padding: 1rem 1.5rem 0 0;
 }
 
